--- a/sass/Layout/_header.scss
+++ b/sass/Layout/_header.scss
@@ -19,7 +19,7 @@ header {
 .header_content{
     .navbar-nav {
         .nav-item {
-            padding-right: $pd-1;
+            padding-right: 35px;
             transition: all 0.2s;
             &:hover {
                 a {
