--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,7 +13,8 @@
 //Layout
 @import './Layout/header';
 @import './Layout/carousel';
-@import './Layout/card'
+@import './Layout/card';
+@import './Layout/find';
 
 //Page
 
