--- a/sass/Components/_button.scss
+++ b/sass/Components/_button.scss
@@ -1,6 +1,15 @@
 .header_contact {
     button {
-        @include styleButton($color-violet,2px,50px,$pd-2,$pd-3);
+        @include styleButton($color-violet,2px,50px,10px,$pd-3);
         @include styleText(0.9em,$fw-4,$color-white);
+    }
+}
+
+.find_right {
+    button {
+        @include styleButton($color-violet,2px,50px,15px,50px);
+        @include styleText(0.8em,$fw-6,$color-white);
+        margin-top: 30px;
+        margin-bottom: 65px;
     }
 }
