--- a/sass/Layout/_card.scss
+++ b/sass/Layout/_card.scss
@@ -15,17 +15,18 @@
         border-radius: 10px;
         z-index: 10;
         transition: all 0.2s;
-        .card-img-top {
+        overflow: hidden;
+        width: 100%;
+        span {
             overflow: hidden;
         }
-        
         &:hover {
             box-shadow: rgba(128, 128, 128, 0.831) 1px 15px 20px;
         }
         img {
-            //max-width: 100%;
+            width: 100%;
             transition: transform 650ms ease-in-out;
-            
+    
             &:hover {
                 transform: scale3d(1.05,1.05,1.05);
             }       
