--- a/sass/Layout/_carousel.scss
+++ b/sass/Layout/_carousel.scss
@@ -1,5 +1,5 @@
 .teamCarousel {
-    background: url(../../img/yellow_top_wave_01.png);
+    background: url(../img/yellow_top_wave_01.png);
     background-position: top;
     background-size: contain;
     background-repeat: no-repeat;
@@ -22,3 +22,4 @@
         width: 100%;
     }
 }
+
