--- a/sass/Layout/_find.scss
+++ b/sass/Layout/_find.scss
@@ -114,7 +114,7 @@
 .teamFind {
     padding-top: 80px;
     padding-bottom: 30px;
-    background: url(../../img/accent_bottom_wave_01.png);
+    background: url(../img/accent_bottom_wave_01.png);
     background-position: bottom;
     background-size: contain;
     background-repeat: no-repeat;
